--- a/app/src/main/res/layout/activity_view_class.xml
+++ b/app/src/main/res/layout/activity_view_class.xml
@@ -18,7 +18,7 @@
         <include
 
             android:id="@+id/add_view_class_toolbar"
-            layout="@layout/toolbar" />
+            layout="@layout/view_toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
