--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -3,7 +3,7 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/view_class_screen_layout"
+    android:id="@+id/add_class_screen_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
@@ -17,14 +17,14 @@
 
         <include
 
-            android:id="@+id/view_class_toolbar"
+            android:id="@+id/add_class_toolbar"
             layout="@layout/view_toolbar" />
 
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
 
-        android:id="@+id/view_class_activity_scroll_view"
+        android:id="@+id/add_class_activity_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -33,7 +33,7 @@
 
         <FrameLayout
 
-            android:id="@+id/view_class_frame_layout"
+            android:id="@+id/add_class_frame_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
