--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -81,6 +81,15 @@
 
             </LinearLayout>
 
+            <android.support.design.widget.FloatingActionButton
+
+                android:id="@+id/classes_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="16dp"
+                android:src="@drawable/d_add" />
+
         </android.support.design.widget.CoordinatorLayout>
 
     </LinearLayout>
