--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -3,7 +3,6 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/add_class_screen_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
@@ -18,13 +17,12 @@
         <include
 
             android:id="@+id/add_class_toolbar"
-            layout="@layout/view_toolbar" />
+            layout="@layout/view_toolbar_padded" />
 
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
 
-        android:id="@+id/add_class_activity_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -33,9 +31,78 @@
 
         <FrameLayout
 
-            android:id="@+id/add_class_frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="24dp">
+
+                <android.support.design.widget.TextInputLayout
+
+                    android:id="@+id/input_name_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+
+                    <EditText
+
+                        android:id="@+id/input_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Name"
+                        android:inputType="textPersonName"
+                        android:singleLine="true"
+                        android:textSize="17sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+
+                    android:id="@+id/input_teacher_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/input_name_layout"
+                    android:layout_marginBottom="8dp">
+
+                    <EditText
+
+                        android:id="@+id/input_teacher"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Teacher"
+                        android:inputType="textPersonName"
+                        android:singleLine="true"
+                        android:textSize="17sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/input_teacher_layout">
+
+                    <EditText
+
+                        android:id="@+id/input_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Location"
+                        android:inputType="textPersonName"
+                        android:singleLine="true"
+                        android:textSize="17sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+            </RelativeLayout>
+
+        </FrameLayout>
 
     </ScrollView>
 
