--- a/app/src/main/res/menu/toolbar_add_class.xml
+++ b/app/src/main/res/menu/toolbar_add_class.xml
@@ -7,8 +7,9 @@
 
     <item
 
+        android:title="Done"
+        android:icon="@drawable/d_tick"
         android:orderInCategory="1"
-        android:title="Test"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
 </menu>
