--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -17,4 +17,19 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+
+        android:title="Notifications">
+
+        <ListPreference
+
+            android:defaultValue="30"
+            android:entries="@array/next_class_notification_minutes_text"
+            android:entryValues="@array/next_class_notification_minutes_values"
+            android:key="nextClassNotificationMinutes"
+            android:summary="Choose when a notification for the next class appears"
+            android:title="Next class notification timing" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
