Added alert dialog for discarding changes.

--- a/app/src/main/res/layout/activity_add_homework.xml
+++ b/app/src/main/res/layout/activity_add_homework.xml
@@ -17,7 +17,7 @@
         <include
 
             android:id="@+id/add_homework_toolbar"
-            layout="@layout/view_toolbar" />
+            layout="@layout/view_toolbar_padded" />
 
     </android.support.design.widget.AppBarLayout>
 
