--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -6,9 +6,11 @@
 
     <RelativeLayout
 
+        android:id="@+id/progress_layout"
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_marginLeft="4dp"
+        android:layout_marginRight="7dp"
         android:layout_centerVertical="true">
 
         <ProgressBar
@@ -24,12 +26,52 @@
 
         <TextView
 
+            android:id="@+id/notification_progress_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="@color/iconGrey"
-            android:text="100" />
+            android:textColor="#000000"
+            android:textSize="15sp" />
 
     </RelativeLayout>
+
+    <RelativeLayout
+
+        android:layout_width="wrap_content"
+        android:layout_height="54dp"
+        android:layout_toRightOf="@id/progress_layout"
+        android:layout_centerVertical="true">
+
+        <TextView
+
+            android:id="@+id/notification_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <TextView
+
+            android:id="@+id/notification_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/notification_header"
+            android:textColor="#000000"
+            android:textSize="14sp" />
+
+    </RelativeLayout>
+
+    <ImageButton
+
+        android:id="@+id/notification_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="8dp"
+        android:clickable="true"
+        android:src="@drawable/d_homework_notification"
+        android:background="#00000000" />
 
 </RelativeLayout>
