--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -5,6 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:animateLayoutChanges="true"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -84,6 +86,7 @@
 
                 <android.support.design.widget.TextInputLayout
 
+                    android:id="@+id/input_location_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/input_teacher_layout">
@@ -99,6 +102,15 @@
                         android:textSize="17sp" />
 
                 </android.support.design.widget.TextInputLayout>
+
+                <android.support.v7.widget.AppCompatButton
+
+                    android:id="@+id/color_picker_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="54dp"
+                    android:text="Select a color"
+                    android:layout_below="@id/input_location_layout"
+                    android:layout_marginTop="16dp" />
 
             </RelativeLayout>
 
