--- a/app/src/main/res/menu/toolbar_check.xml
+++ b/app/src/main/res/menu/toolbar_check.xml
@@ -8,7 +8,7 @@
     <item
 
         android:title="Done"
-        android:icon="@drawable/d_tick"
+        android:icon="@drawable/tick"
         android:orderInCategory="1"
         app:showAsAction="always" />
 
