--- a/app/src/main/res/layout/activity_add_class.xml
+++ b/app/src/main/res/layout/activity_add_class.xml
@@ -5,8 +5,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:animateLayoutChanges="true"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -31,16 +29,16 @@
         android:fillViewport="true"
         android:scrollbars="none">
 
-        <FrameLayout
+        <RelativeLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
 
+                android:id="@+id/input_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="16dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:paddingTop="24dp">
@@ -103,18 +101,17 @@
 
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.v7.widget.AppCompatButton
-
-                    android:id="@+id/color_picker_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="54dp"
-                    android:text="Select a color"
-                    android:layout_below="@id/input_location_layout"
-                    android:layout_marginTop="16dp" />
-
             </RelativeLayout>
 
-        </FrameLayout>
+            <FrameLayout
+
+                android:id="@+id/color_frame_layout"
+                android:layout_below="@id/input_layout"
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
 
     </ScrollView>
 
