--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="16dp"
-                android:src="@drawable/d_add" />
+                android:src="@drawable/add" />
 
         </android.support.design.widget.CoordinatorLayout>
 
