--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,12 @@
     <color name="textColor">#ffffff</color>
     <color name="iconGrey">#9e9e9e</color>
 
+    <color name="black">#000</color>
+    <color name="red">#f00</color>
+    <color name="green">#0f0</color>
+    <color name="blue">#00f</color>
+    <color name="yellow">#ff0</color>
+    <color name="magenta">#f0f</color>
+    <color name="cyan">#0ff</color>
+
 </resources>
