--- a/app/src/main/res/layout/activity_view_class.xml
+++ b/app/src/main/res/layout/activity_view_class.xml
@@ -9,30 +9,19 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+    <include
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <include
-
-            android:id="@+id/view_class_toolbar"
-            layout="@layout/view_toolbar" />
-
-    </android.support.design.widget.AppBarLayout>
+        android:id="@+id/view_class_toolbar"
+        layout="@layout/view_toolbar" />
 
     <ScrollView
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fillViewport="true"
         android:scrollbars="none">
-
-        <FrameLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
     </ScrollView>
 
