--- a/app/src/main/res/layout/fragment_classes.xml
+++ b/app/src/main/res/layout/fragment_classes.xml
@@ -1,7 +1,7 @@
 <RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/class_layout"
+    android:id="@+id/classes_class_list_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
