--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -6,7 +6,7 @@
 
     <android.support.v7.widget.CardView
 
-        android:id="@+id/no_classes"
+        android:id="@+id/overview_no_classes_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -24,20 +24,20 @@
 
     <android.support.v7.widget.CardView
 
-        android:id="@+id/current_class_card"
+        android:id="@+id/overview_current_class_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp">
 
         <RelativeLayout
 
-            android:id="@+id/current_class_info"
+            android:id="@+id/overview_current_class_card_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <RelativeLayout
 
-                android:id="@+id/current_class_header"
+                android:id="@+id/overview_current_class_card_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -46,7 +46,7 @@
 
                 <TextView
 
-                    android:id="@+id/current_class_title"
+                    android:id="@+id/overview_current_class_card_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
@@ -54,10 +54,10 @@
 
                 <TextView
 
-                    android:id="@+id/current_class_location_teacher"
+                    android:id="@+id/overview_current_class_card_location_teacher"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/current_class_title"
+                    android:layout_below="@id/overview_current_class_card_title"
                     android:textSize="14sp" />
 
             </RelativeLayout>
@@ -66,7 +66,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/current_class_header"
+                android:layout_below="@id/overview_current_class_card_header"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
@@ -74,37 +74,37 @@
 
                 <ProgressBar
 
-                    android:id="@+id/current_class_progress"
+                    android:id="@+id/overview_current_class_card_progress_bar"
                     style="@android:style/Widget.Material.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:progressTint="@color/colorPrimary">
+                    android:progressTint="@color/primary">
 
                 </ProgressBar>
 
                 <TextView
 
-                    android:id="@+id/current_class_start_time"
+                    android:id="@+id/overview_current_class_card_start_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/current_class_progress"
+                    android:layout_below="@id/overview_current_class_card_progress_bar"
                     android:textSize="14sp" />
 
                 <TextView
 
-                    android:id="@+id/current_class_end_time"
+                    android:id="@+id/overview_current_class_card_end_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_below="@id/current_class_progress"
+                    android:layout_below="@id/overview_current_class_card_progress_bar"
                     android:textSize="14sp" />
 
                 <TextView
 
-                    android:id="@+id/current_class_progress_percentage"
+                    android:id="@+id/overview_current_class_card_progress_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/current_class_progress"
+                    android:layout_below="@id/overview_current_class_card_progress_bar"
                     android:layout_centerHorizontal="true"
                     android:textSize="14sp" />
 
@@ -116,10 +116,10 @@
 
     <android.support.v7.widget.CardView
 
-        android:id="@+id/next_classes_card"
+        android:id="@+id/overview_next_classes_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/current_class_card"
+        android:layout_below="@id/overview_current_class_card"
         android:layout_margin="16dp">
 
         <RelativeLayout
@@ -133,7 +133,7 @@
 
             <ExpandableListView
 
-                android:id="@+id/upcoming_classes_list"
+                android:id="@+id/overview_next_classes_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
@@ -149,10 +149,10 @@
 
     <android.support.v7.widget.CardView
 
-        android:id="@+id/tomorrow_classes_card"
+        android:id="@+id/overview_tomorrow_classes_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/next_classes_card"
+        android:layout_below="@id/overview_next_classes_card"
         android:layout_margin="16dp">
 
         <RelativeLayout
@@ -166,7 +166,7 @@
 
             <ExpandableListView
 
-                android:id="@+id/tomorrow_classes_list"
+                android:id="@+id/overview_tomorrow_classes_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
