--- a/app/src/main/res/layout/view_drawer_header.xml
+++ b/app/src/main/res/layout/view_drawer_header.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="128dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/primary"
     android:orientation="vertical">
 
     <ImageView
