--- a/app/src/main/res/layout/view_list_group.xml
+++ b/app/src/main/res/layout/view_list_group.xml
@@ -5,11 +5,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/textColor">
+    android:background="@color/text">
 
     <TextView
 
-        android:id="@+id/list_group_text"
+        android:id="@+id/view_list_group_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
