--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,18 +2,10 @@
 
 <resources>
 
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#00796b</color>
-    <color name="colorAccent">#00bcd4</color>
-    <color name="textColor">#ffffff</color>
-    <color name="iconGrey">#9e9e9e</color>
-
-    <color name="black">#000</color>
-    <color name="red">#f00</color>
-    <color name="green">#0f0</color>
-    <color name="blue">#00f</color>
-    <color name="yellow">#ff0</color>
-    <color name="magenta">#f0f</color>
-    <color name="cyan">#0ff</color>
+    <color name="primary">#009688</color>
+    <color name="primary_dark">#00796b</color>
+    <color name="accent">#00bcd4</color>
+    <color name="text">#ffffff</color>
+    <color name="icon_grey">#9e9e9e</color>
 
 </resources>
