--- a/app/src/main/res/layout/view_toolbar_padded.xml
+++ b/app/src/main/res/layout/view_toolbar_padded.xml
@@ -9,6 +9,7 @@
     android:elevation="4dp"
     android:minHeight="?attr/actionBarSize"
     android:paddingRight="6dp"
+    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
 </android.support.v7.widget.Toolbar>
