--- a/app/src/main/res/layout/view_notification.xml
+++ b/app/src/main/res/layout/view_notification.xml
@@ -10,8 +10,7 @@
         android:layout_width="54dp"
         android:layout_height="54dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginLeft="8dp">
 
         <ProgressBar
 
@@ -40,14 +39,15 @@
         android:layout_width="wrap_content"
         android:layout_height="54dp"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/view_notification_progress_layout">
+        android:layout_marginLeft="8dp"
+        android:layout_toRightOf="@id/view_notification_progress_layout"
+        android:paddingTop="6dp">
 
         <TextView
 
             android:id="@+id/view_notification_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
             android:textColor="#000000"
             android:textSize="16sp" />
 
