--- a/app/src/main/res/layout/view_toolbar_padded.xml
+++ b/app/src/main/res/layout/view_toolbar_padded.xml
@@ -3,13 +3,14 @@
 <android.support.v7.widget.Toolbar
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:minHeight="?attr/actionBarSize"
     android:paddingRight="6dp"
-    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
 </android.support.v7.widget.Toolbar>
