--- a/app/src/main/res/menu/toolbar_check.xml
+++ b/app/src/main/res/menu/toolbar_check.xml
@@ -7,7 +7,8 @@
 
     <item
 
-        android:icon="@drawable/tick"
+        android:id="@+id/toolbar_check_check"
+        android:icon="@drawable/check"
         android:orderInCategory="1"
         android:title="Done"
         app:showAsAction="always" />
