--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,21 @@
 
 <resources>
 
-    <color name="primary">#009688</color>
-    <color name="primary_dark">#00796b</color>
-    <color name="accent">#00bcd4</color>
+    <color name="primary">#00897b</color>
+    <color name="primary_dark">#00695c</color>
+    <color name="accent">#ff6e40</color>
     <color name="text">#ffffff</color>
     <color name="icon_grey">#9e9e9e</color>
+
+    <color name="bright_pink">#FF007F</color>
+    <color name="red">#FF0000</color>
+    <color name="orange">#FF7F00</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="green">#00FF00</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="azure">#007FFF</color>
+    <color name="blue">#0000FF</color>
+    <color name="violet">#7F00FF</color>
+    <color name="magenta">#FF00FF</color>
 
 </resources>
