Preference change listener in the main settings screen.

--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -25,7 +25,7 @@
 
             android:defaultValue="false"
             android:key="detailed_notification"
-            android:summary="This will show the detailed notification"
+            android:summary="This toggles between the detailed and simple notification"
             android:title="Show detailed notification" />
 
         <ListPreference
