Cleanup and better classes fragment implementation.

--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -142,6 +142,7 @@
                 android:layout_marginRight="4dp"
                 android:childDivider="#d3d3d3"
                 android:dividerHeight="1dp"
+                android:layoutDirection="rtl"
                 android:scrollbars="none">
 
             </ExpandableListView>
