--- a/app/src/main/res/layout/view_class_card.xml
+++ b/app/src/main/res/layout/view_class_card.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
 
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/view_class_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,6 +16,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="4dp"
         android:clickable="true"
+        android:elevation="2dp"
         android:foreground="?android:attr/selectableItemBackground">
 
         <RelativeLayout
@@ -37,32 +36,17 @@
                 android:layout_marginTop="8dp"
                 android:textSize="18sp" />
 
-            <com.github.ivbaranov.mli.MaterialLetterIcon
-
-                android:id="@+id/view_class_card_homework_icon"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                app:mli_letter="H"
-                app:mli_letter_color="@color/text"
-                app:mli_letter_size="12"
-                app:mli_round_rect_rx="8"
-                app:mli_round_rect_ry="8"
-                app:mli_shape_color="@color/icon_grey"
-                app:mli_shape_type="round_rect" />
-
             <TextView
 
-                android:id="@+id/view_class_card_location_teacher"
+                android:id="@+id/view_class_card_teacher_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
                 android:layout_below="@id/view_class_card_title"
+                android:layout_marginBottom="10dp"
                 android:textSize="14sp" />
 
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
-</RelativeLayout>
+</LinearLayout>
