--- a/app/src/main/res/layout/activity_add_class_into_timetable.xml
+++ b/app/src/main/res/layout/activity_add_class_into_timetable.xml
@@ -11,15 +11,43 @@
     <include
 
         android:id="@+id/add_class_into_timetable_toolbar"
-        layout="@layout/view_toolbar_padded" />
+        layout="@layout/view_toolbar" />
 
     <ScrollView
 
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:fillViewport="true"
+        android:orientation="vertical"
         android:scrollbars="none">
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="true">
+
+            <android.support.v7.widget.CardView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp">
+
+                <ListView
+
+                    android:id="@+id/add_class_into_timetable_list_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp">
+
+                </ListView>
+
+            </android.support.v7.widget.CardView>
+
+        </LinearLayout>
 
     </ScrollView>
 
