--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="primary">#00897b</color>
     <color name="primary_dark">#00695c</color>
     <color name="accent">#ff6e40</color>
+    <color name="grey_text">#757575</color>
     <color name="text">#ffffff</color>
 
     <color name="bright_pink">#FF007F</color>
