--- a/app/src/main/res/layout/dialog_edit_day_edit_class.xml
+++ b/app/src/main/res/layout/dialog_edit_day_edit_class.xml
@@ -31,6 +31,7 @@
 
     <TextView
 
+        android:id="@+id/dialog_edit_day_edit_class_start_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
@@ -55,6 +56,7 @@
 
     <TextView
 
+        android:id="@+id/dialog_edit_day_edit_class_end_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
